k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comin-authentication-service
  namespace: comin-dev
  labels:
    app: comin-authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comin-authentication-service
  template:
    metadata:
      labels:
        app: comin-authentication-service
    spec:
      containers:
      - name: comin-authentication-service
        image: ghcr.io/kaveeshag/comin-authentication-service:6c0f8763552bde0b1aa28c5a12a09e53fe8028ff
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
